<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Эти две строки только в дефолтнм strings.xml !!! -->

    <string name="version_name1" translatable="false">3.4.21</string>

    <string name="app_name" translatable="false">GPS to SMS</string>
    <!-- EOF Эти две строки только в дефолтнм strings.xml !!! -->

    <string name="info_sms_sent">SMS is sent</string>
    <string name="info_sms_delivered">SMS is delivered</string>
    <string name="info_sms_not_delivered">SMS is NOT delivered</string>
    <string name="info_sms_noservice">No service! SMS is NOT sent!</string>
    <string name="info_sms_radioof">Radio off! SMS is NOT sent!</string>
    <string name="info_sms_nullpdu">PDU error! SMS is NOT sent!</string>
    <string name="info_sms_generic">Generic error! SMS is NOT sent!</string>
    <string name="gps_state_disabled">GPS is turned off!</string>
    <string name="gps_state_in_progress">Acquiring coordinates...</string>
    <string name="gps_state_unavialable">GPS coordinates are NOT available</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_rate">Rate app</string>
    <string name="menu_item_sms_regexp">Coordinates repository</string>
    <string name="menu_item_add_coord">Add point</string>
    <string name="another_msg_button_text">Send another SMS</string>
    <string name="enable_gps_btn">Turn on GPS</string>
    <string name="sms_is_sent_msg">Message was successfully sent</string>
    <string name="error_no_phone_number">You should specify a phone number first!</string>
    <string name="default_sms_msg">I\'m here</string>
    <string name="save_btn_txt">Save</string>
    <string name="cancel_btn_txt">Cancel</string>
    <string name="del_btn_txt">Delete</string>
    <string name="info_print1">GPS OK, accuracy</string>
    <string name="info_print2">m</string>
    <string name="info_latitude">Latitude</string>
    <string name="info_longitude">Longitude</string>
    <string name="info_accuracy">Accuracy</string>
    <string name="info_please_wait">Please wait while sending SMS for</string>
    <string name="share_topic">My GPS coordinates</string>
    <string name="share_via">Share via</string>
    <string name="imgdesc_copy">Copy to clipboard</string>
    <string name="imgdesc_share">Share</string>
    <string name="imgdesc_map">Show on map</string>
    <string name="imgdesc_send_sms">Send SMS</string>
    <string name="imgdesc_choose_contact">Choose a contact</string>
    <string name="enterAnyPhone">Phone number</string>
    <string name="text_copied">Copied to clipboard</string>
    <string name="pref_keepscreen">Keep screen on</string>
    <string name="pref_keepscreen_summary">Stop the screen turning off when this application is active</string>
    <string name="pref_clip">Clipboard content</string>
    <string name="pref_clip_summary">Specify data to be copied</string>
    <string name="pref_smstext">SMS Text</string>
    <string name="pref_general">General</string>
    <string name="pref_content">Content</string>
    <string name="pref_about">About</string>
    <string name="pref_about_summary">Version</string>
    <string name="pref_apptheme">Application Theme</string>
    <string name="pref_regexp_sms">Handle incoming SMS messages</string>
    <string name="pref_regexp_sms_summary">Show push notification in case of receiving SMS which contains valid GPS coordinates</string>
    <string name="tab_mycoords">Saved</string>
    <string name="tab_mysms">Inbox</string>
    <string name="tab_mysms_out">Sent</string>
    <string name="point_edit_text_placeholder">Point name</string>
    <string name="save_point_dlg_header">Save point</string>
    <string name="mysms_actions">Actions</string>
    <string name="point_saved">Point was saved</string>
    <string name="addpoint_la_ex">For example 55.1784657</string>
    <string name="addpoint_lo_ex">For example 57.5734553</string>
    <string name="add_point_error">Invalid coordinates!</string>
    <string name="prefs_lang">Language</string>

    <string name="choose_fav_app">Favourite app</string>
    <string name="choose_fav_app_info">Specify the application for fast sharing feature</string>
    <string name="pref_sms_content_summary">Specify data to be sent via SMS</string>

    <!-- Themes -->
    <string name="app_theme_1">Brown</string>
    <string name="app_theme_2">Blue Grey</string>
    <string name="app_theme_3">Yellow</string>
    <string name="app_theme_4">Pink</string>
    <string name="app_theme_5">Teal</string>
    <string name="app_theme_6">Grey</string>

    <!-- Donations -->
    <string name="donate_title_1">Bus ride</string>
    <string name="donate_title_2">Tasty hamburger</string>
    <string name="donate_title_3">Good beer</string>
    <string name="donate_title_4">Cinema ticket</string>
    <string name="donate_title_5">Pay for the party! Lets\'s rock!</string>

    <string name="menu_item_donate">Donate</string>

    <string name="donation_title">Thank you for donating!</string>
    <string name="donation_desc">
        \nAs a small gift for your donation, there are few <b>new Application themes</b> available in Settings, check them out after making the donation!
        \n\nSo, you can help developer to buy anything from the following list:
        \n
    </string>

    <string name="donation_already_purchased">You have already made this donation! Thanks for that by the way!</string>
    <string name="donation_restore_purchases">Restore purchases</string>
    <string name="donation_billing_not_ready">Your billing system is not ready!</string>

    <string name="sms_notify_title">Location received</string>
    <string name="sms_notify_desc1">Tap to view it on the map</string>
    <string name="pref_share_buttons_text">Share Buttons content</string>
    <string name="pref_share_buttons_text_summary">Specify data for Share and Favourite buttons</string>

    <string name="text_insufficient_privileges">Insufficient privileges</string>
    <string name="text_current_coords">Update current coordinates</string>
    <string name="menu_converter">Converter</string>
    <string name="text_converter_decimals">Decimals</string>
    <string name="text_converter_dm">Degrees, minutes</string>
    <string name="text_converter_dms">Degrees, minutes, seconds</string>
    <string name="text_converter_utm_h">UTM (Hemisphere)</string>
    <string name="text_converter_utm_z">UTM (Zone)</string>
    <string name="another_msg_button_smsapp">Open SMS App</string>


    <string name="pref_text_before">Text before coordinates in SMS</string>
    <string name="pref_text_before_summary">This text will be inserted in SMS before coordinates</string>
    <string name="pref_text_after">Text after coordinates in SMS</string>
    <string name="pref_text_after_summary">This text will be inserted in SMS after coordinates</string>

</resources>
