<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_general">

        <ListPreference
            android:entries="@array/appLangs"
            android:entryValues="@array/appLangsValues"
            android:key="prefLang"
            android:title="@string/prefs_lang" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefKeepScreen"
            android:summary="@string/pref_keepscreen_summary"
            android:title="@string/pref_keepscreen" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefRegexpSMS"
            android:summary="@string/pref_regexp_sms_summary"
            android:title="@string/pref_regexp_sms" />

        <ListPreference
            android:defaultValue="1"
            android:key="prefAppTheme"
            android:title="@string/pref_apptheme" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_content">

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/shareProviders"
            android:entryValues="@array/shareProvidersValues"
            android:key="prefSMSContent"
            android:summary="@string/pref_sms_content_summary"
            android:title="@string/pref_smstext" />

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/shareProviders"
            android:entryValues="@array/shareProvidersValues"
            android:key="prefClipboard"
            android:summary="@string/pref_clip_summary"
            android:title="@string/pref_clip" />

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/shareProviders"
            android:entryValues="@array/shareProvidersValues"
            android:key="prefShareButtonsContent"
            android:summary="@string/pref_share_buttons_text_summary"
            android:title="@string/pref_share_buttons_text" />

        <Preference
            android:key="prefFav"
            android:summary="@string/choose_fav_app_info"
            android:title="@string/choose_fav_app" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_about">

        <Preference
            android:key="prefAbout"
            android:summary="@string/pref_about_summary"
            android:title="@string/app_name" />

    </PreferenceCategory>

</PreferenceScreen>