<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/repo_buttons_dialog_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="10dp" >

    <RelativeLayout
        android:id="@+id/RelLayoutSh"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="0dp" >

        <ImageButton
            android:id="@+id/btnSave2"
			android:src="?attr/btn_ic_action_save" 
			android:layout_width="wrap_content"
			android:layout_height="54dp"
			android:contentDescription="@string/save_btn_txt"
			android:adjustViewBounds="true"
    	    android:scaleType="fitCenter" 
			android:layout_alignParentRight="true"
		 />
        
        <ImageButton
            android:id="@+id/btnMap2"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_toLeftOf="@id/btnSave2"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imgdesc_map"
            android:scaleType="fitCenter"
            android:src="?attr/btn_ic_action_map" />

        <ImageButton
            android:id="@+id/btnCopy2"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_toLeftOf="@id/btnMap2"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imgdesc_copy"
            android:scaleType="fitCenter"
            android:src="?attr/btn_ic_action_copy" />

        <ImageButton android:id="@+id/btnFav2"
            android:src="@drawable/ic_empty"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:contentDescription=""
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"

            android:layout_alignParentLeft="true"

            />

        <ImageButton
            android:id="@+id/btnShare2"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imgdesc_share"
            android:scaleType="fitCenter"
            android:src="?attr/btn_ic_action_share"

            android:layout_toRightOf="@id/btnFav2"
            android:layout_toLeftOf="@id/btnCopy2"
            />
    </RelativeLayout>

</LinearLayout>