<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/repo_addpoint_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/Linear1_"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/point_edit_text_placeholder" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Linear1_"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/point_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint=""
            android:maxLength="250"
            android:maxLines="1" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear2_"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Linear1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/info_latitude" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Linear2_"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/point_la"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:ems="10"
            android:hint="@string/addpoint_la_ex"
            android:lines="1"
            android:maxLength="10"
            android:maxLines="1" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear3_"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Linear2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/info_longitude" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Linear3_"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/point_lo"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/addpoint_lo_ex"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLength="10"
            android:maxLines="1" >
        </EditText>
    </LinearLayout>

</RelativeLayout>