<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <!-- Произвольный номер телефона -->
    
	<RelativeLayout 
 	    android:id="@+id/RelLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingLeft="0dp"
	    android:paddingRight="0dp" >
 	
 	    <ImageButton android:id="@+id/send_plain"
			
			android:src="?attr/btn_ic_action_send_now" 
			android:layout_width="wrap_content"
			android:layout_height="54dp"
			android:layout_alignParentRight="true"
			android:contentDescription="@string/imgdesc_send_sms"
			android:adjustViewBounds="true"
    	    android:scaleType="fitCenter"
		 />

 	     <ImageButton android:id="@+id/choose_contact"
			android:src="?attr/btn_ic_action_person" 
			android:layout_width="wrap_content"
			android:layout_height="54dp"
			android:contentDescription="@string/imgdesc_choose_contact"
			android:layout_alignParentLeft="true"
			android:adjustViewBounds="true"
    	    android:scaleType="fitCenter"
		 />   
 	    
 	   <EditText
 	       android:id="@+id/editText1"
 	       android:layout_width="fill_parent"
 	       android:layout_height="wrap_content"
		   android:hint="@string/enterAnyPhone"
 	       android:layout_centerVertical="true"
 	       android:layout_toRightOf="@id/choose_contact"
 	       
 	       android:ems="10"
 	       android:inputType="phone" >

 	   
 	       
 	   </EditText>
 	    
 	</RelativeLayout>

	
    
	<!-- 
    
	<RelativeLayout
 	    android:id="@+id/RelLayout3"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/RelLayout2"
	    android:orientation="horizontal"
	    android:paddingLeft="0dp"
	    android:paddingRight="0dp" >
 	
 	    <ImageButton android:id="@+id/send2"
			android:src="@drawable/hangouts" 
			android:layout_width="wrap_content"
			android:layout_height="54dp"
			android:layout_alignParentRight="true"
			android:contentDescription="@string/imgdesc"
		 />

 	    <Button
           android:id="@+id/cont2"
           android:layout_width="fill_parent"
           android:layout_height="54dp"
           android:layout_toLeftOf="@id/send2"
           android:text="@string/select_contact_btn_txt" 
		/>
 	    
 	</RelativeLayout>

	
	<RelativeLayout
 	    android:id="@+id/RelLayout4"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/RelLayout3"
	    android:orientation="horizontal"
	    android:paddingLeft="0dp"
	    android:paddingRight="0dp" >
 	
 	    <ImageButton android:id="@+id/send3"
			android:src="@drawable/hangouts" 
			android:layout_width="wrap_content"
			android:layout_height="54dp"
			android:layout_alignParentRight="true"
			android:contentDescription="@string/imgdesc"
		 />

 	    <Button
           android:id="@+id/cont3"
           android:layout_width="fill_parent"
           android:layout_height="54dp"
           android:layout_toLeftOf="@id/send3"
           android:text="@string/select_contact_btn_txt" 
		/>
 	    
 	</RelativeLayout>
-->

	<!-- Текст статуса координат и кнопка переключатель способа отправки СМС -->
	
	
	<LinearLayout
       
        android:id="@+id/linearLayoutText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RelLayout1"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"  >

 		<TextView
           android:id="@+id/textView1"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:gravity="center"
           android:maxLines="3"
           android:singleLine="false"
           android:text="Координаты получены, точность 25 м\nШирота 3424234234\nДолгота 32424324" />
       
	</LinearLayout>
	
	<!--  
	<RelativeLayout
       
        android:id="@+id/RelLayoutBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelLayout2"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
	    android:paddingRight="0dp">

 		<ImageButton android:id="@+id/sendViaToggleButton"
			android:src="@drawable/navitel" 
			android:layout_width="wrap_content"
			android:layout_height="54dp"
			android:layout_alignParentRight="true"
			android:contentDescription="@string/imgdesc"
		 />
	    
 		<TextView
           android:id="@+id/textView1"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:layout_alignParentLeft="true"
		   android:layout_toLeftOf="@id/sendViaToggleButton"
           android:text="Координаты получены, точность 25 м\nШирота 3424234234\nДолгота 32424324" 
		/>
       
	</RelativeLayout>
	 -->
	 
	 
	 <!-- Кнопки шаринга -->
	 <RelativeLayout 
 	    android:id="@+id/RelLayoutSh"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/linearLayoutText"
	    android:orientation="horizontal"
	    android:paddingLeft="0dp"
	    android:paddingRight="0dp" >
   
 		<ImageButton android:id="@+id/btnSave"
			android:src="?attr/btn_ic_action_save" 
			android:layout_width="wrap_content"
			android:layout_height="54dp"
			android:contentDescription="@string/save_btn_txt"
			android:adjustViewBounds="true"
    	    android:scaleType="fitCenter" 
    	    
			android:layout_alignParentRight="true"			
		 />
  
		<ImageButton android:id="@+id/btnMap"
			android:src="?attr/btn_ic_action_map" 
			android:layout_width="wrap_content"
			android:layout_height="54dp"
			android:contentDescription="@string/imgdesc_map"
			android:adjustViewBounds="true"
    	    android:scaleType="fitCenter"
    	    
    	    android:layout_toLeftOf="@id/btnSave"
		/>
 		
	    <ImageButton android:id="@+id/btnCopy"
			android:src="?attr/btn_ic_action_copy" 
			android:layout_width="wrap_content"
			android:layout_height="54dp"
			android:contentDescription="@string/imgdesc_copy"
			android:adjustViewBounds="true"
    	    android:scaleType="fitCenter"
    	    
    	    android:layout_toLeftOf="@id/btnMap"
		/>
         <ImageButton android:id="@+id/btnFav"
             android:src="@drawable/ic_empty"
             android:layout_width="wrap_content"
             android:layout_height="54dp"
             android:contentDescription=""
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"

             android:layout_alignParentLeft="true"

             />
 		<ImageButton android:id="@+id/btnShare"
			android:src="?attr/btn_ic_action_share" 
			android:layout_width="wrap_content"
			android:layout_height="54dp"
			android:contentDescription="@string/imgdesc_share"
			android:adjustViewBounds="true"
    	    android:scaleType="fitCenter"
    	    

    	    android:layout_toLeftOf="@id/btnCopy"
            android:layout_toRightOf="@id/btnFav"
		/>








     </RelativeLayout>
	<!-- Кнопка включения GPS -->

	<LinearLayout
       
        android:id="@+id/RelLayoutGPSBTN"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/RelLayoutSh"
	    android:orientation="horizontal"
	    android:paddingLeft="0dp"
	    android:paddingRight="0dp" >
	 
		<Button
 		    android:id="@+id/button3"
 		    style="?android:attr/buttonStyleSmall"
 		    android:layout_width="fill_parent"
 		    android:layout_height="54dp"
 		    android:text="@string/enable_gps_btn" 
	    />
	
	</LinearLayout>
	
	
</RelativeLayout>
