<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

 	<LinearLayout
       
        android:id="@+id/linearLayoutInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

 		<TextView
 		    android:id="@+id/textView1"
 		    android:layout_width="0dp"
 		    android:layout_height="match_parent"
 		    android:layout_weight="1"
 		    android:gravity="center"
 		    android:text="@string/sms_is_sent_msg"
 		    android:textAppearance="?android:attr/textAppearanceMedium" />
       
   </LinearLayout>


    <LinearLayout

        android:id="@+id/linearLayoutText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayoutInfo"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textViewTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>


   <LinearLayout
       
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayoutText"
        android:orientation="horizontal"
        android:paddingTop="16dp" >
   
  	 <Button
       android:id="@+id/button1"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:gravity="center"
       android:text="@string/another_msg_button_text" />
       
	</LinearLayout>

   	<LinearLayout
       
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:orientation="horizontal" >

	</LinearLayout>




    <RelativeLayout

        android:id="@+id/linearLayoutSMSApp"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout4"
        android:orientation="horizontal"
        android:paddingTop="16dp" >

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/another_msg_button_smsapp" />

    </RelativeLayout>

</RelativeLayout>
